--- a/QAP4.csproj
+++ b/QAP4.csproj
@@ -54,7 +54,7 @@
     <None Update="appsettings.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Update="Views\Group\Group.cshtml">
+    <None Update="Views\Index\Group.cshtml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Update="Views\Home\About.cshtml">
@@ -108,9 +108,6 @@
     <None Update="Views\Shared\Error.cshtml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Update="Views\Shared\_ItemsManager.cshtml">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
     <None Update="Views\Shared\_Layout.cshtml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
@@ -120,25 +117,25 @@
     <None Update="Views\Shared\_ValidationScriptsPartial.cshtml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Update="Views\Test\CreateQuizTest.cshtml">
+    <None Update="Views\Index\CreateQuizTest.cshtml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Update="Views\Test\CreateWrittingTest.cshtml">
+    <None Update="Views\Index\CreateWrittingTest.cshtml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Update="Views\Test\DoTest.cshtml">
+    <None Update="Views\Index\DoTest.cshtml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Update="Views\Test\RequestTest.cshtml">
+    <None Update="Views\Index\RequestTest.cshtml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Update="Views\Test\Tests.cshtml">
+    <None Update="Views\Index\Tests.cshtml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Update="Views\Tutorial\RequestTutorial.cshtml">
+    <None Update="Views\Index\RequestTutorial.cshtml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Update="Views\Tutorial\TutorialsManager.cshtml">
+    <None Update="Views\Index\TutorialsManager.cshtml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Update="Views\Index\Login.cshtml">
@@ -165,6 +162,14 @@
     <None Update="wwwroot\images\grips\vertical.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Domain\AggreatesModels\Posts\Commands\" />
+    <Folder Include="Domain\AggreatesModels\Posts\Events\" />
+    <Folder Include="Domain\AggreatesModels\Posts\EventHandlers\" />
+    <Folder Include="Domain\AggreatesModels\Posts\CommandHandlers\" />
+    <Folder Include="Domain\AggreatesModels\Posts\Validations\" />
+    <Folder Include="Domain\AggreatesModels\Posts\Repository\" />
   </ItemGroup>
 
 </Project>
