--- a/appsettings.json
+++ b/appsettings.json
@@ -6,10 +6,13 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=qap.database.windows.net;Database=QAP;User id=duycs;Password=abc@1234;Trusted_Connection=False;Integrated Security=False"
+    "PostStudy": "server=mysql-2688-0.cloudclusters.net;port=10005;database=PostStudy;user=admin;password=abc@1234;CharSet=utf8;"
   },
-
+  "JWT": {
+    "SecretKey": "THIS IS USED TO SIGN AND VERIFY JWT TOKENS, REPLACE IT WITH YOUR OWN SECRET, IT CAN BE ANY STRING"
+  },
   "AWSS3": {
+    "BucketSignedURL":"https://s3-ap-southeast-1.amazonaws.com",
     "AWSAccessKeyId": "",
     "AWSSecretKey": "",
     "BucketPostStudy":  "poststudy"
