--- a/appsettings.json
+++ b/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=qap.database.windows.net;Database=QAP;User id=duycs;Password=abc@1234;Trusted_Connection=False;MultipleActiveResultSets=true;Integrated Security=False"
+    "DefaultConnection": "Server=qap.database.windows.net;Database=QAP;User id=duycs;Password=abc@1234;Trusted_Connection=False;MultipleActiveResultSets=true;Integrated Security=False",
   },
 
   "AWSS3": {
