update connection str

--- a/appsettings.json
+++ b/appsettings.json
@@ -6,9 +6,9 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection2": "Server=qap.database.windows.net;Database=QAP;User id=duycs;Password=abc@1234;Trusted_Connection=False;MultipleActiveResultSets=true;Integrated Security=False",
-    "DefaultConnection": "Server=.;Database=QAP;User id=sa;Password=abc@1234;Trusted_Connection=False;MultipleActiveResultSets=true;Integrated Security=False",
-    "DefaultConnection1": "server=localhost;port=3306;database=qap;user=root;password=abc@1234;CharSet=utf8;"
+    "DefaultConnection": "Server=qap.database.windows.net;Database=QAP;User id=duycs;Password=abc@1234;Trusted_Connection=False;MultipleActiveResultSets=true;Integrated Security=False",
+    "DefaultConnection1": "Server=.;Database=QAP;User id=sa;Password=abc@1234;Trusted_Connection=False;MultipleActiveResultSets=true;Integrated Security=False",
+    "DefaultConnection2": "server=localhost;port=3306;database=qap;user=root;password=abc@1234;CharSet=utf8;"
   },
 
   "AWSS3": {
