--- a/appsettings.json
+++ b/appsettings.json
@@ -7,8 +7,8 @@
   },
   "ConnectionStrings": {
     "DefaultConnection1": "Server=qap.database.windows.net;Database=QAP;User id=duycs;Password=abc@1234;Trusted_Connection=False;MultipleActiveResultSets=true;Integrated Security=False",
-    "DefaultConnection": "Server=.;Database=QAP;User id=sa;Password=abc@1234;Trusted_Connection=False;MultipleActiveResultSets=true;Integrated Security=False",
-    "DefaultConnection2": "server=localhost;port=3306;database=qap;user=root;password=abc@1234;CharSet=utf8;"
+    "DefaultConnection2": "Server=.;Database=QAP;User id=sa;Password=abc@1234;Trusted_Connection=False;MultipleActiveResultSets=true;Integrated Security=False",
+    "DefaultConnection": "server=localhost;port=3306;database=qap;user=root;password=abc@1234;CharSet=utf8;"
   },
 
   "AWSS3": {
