--- a/QAP4.csproj
+++ b/QAP4.csproj
@@ -12,7 +12,11 @@
     <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="3.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.0.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.EventLog" Version="3.1.2" />
-    <PackageReference Include="MySql.Data.EntityFrameworkCore" Version="8.0.16" />
+
+    <!-- netcore 3.0 have not supported mysql yet -->
+    <!-- <PackageReference Include="MySql.Data.EntityFrameworkCore" Version="8.0.16" /> -->
+    
+    <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="3.1.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.0.0" />
     <PackageReference Include="Sendgrid" Version="9.9.0" />
   </ItemGroup>
